# teensygrad

./: .gitignore  Cargo.toml  pyproject.toml
src/: lib.rs
src/autograd/: tensor.rs
src/neuralnet/: layers.rs  lossfuncs.rs
src/teensygrad/: __init__.py
